/**
 * 该文件为由脚本 `npm run test:demo` 自动生成，如需修改，执行脚本命令即可。请勿手写直接修改，否则会被覆盖
 */

import { mount } from '@vue/test-utils';
import baseVue from '@/search/demos/base.vue';
import colorVue from '@/search/demos/color.vue';
import mobileVue from '@/search/demos/mobile.vue';

const mapper = {
  baseVue,
  colorVue,
  mobileVue,
};

describe('Search', () => {
  Object.keys(mapper).forEach((demoName) => {
    it(`Search ${demoName} demo works fine`, () => {
      const wrapper = mount(mapper[demoName]);
      expect(wrapper.element).toMatchSnapshot();
    });
  });
});
